Aumenta cobertura de testes backend para >89%
- Adiciona testes para RestExceptionHandler, AtividadeController, AtividadeService, ImpactoMapaService, NotificacaoModelosServiceMock, AcessoAdClient, UnidadeController, UsuarioPerfil, NotificacaoEmailService, ProcessoService, SubprocessoService e MapaService.
- Corrige problemas de compilação em MapaAjusteMapperTest e RestExceptionHandlerTest.
- Refina configuração do JaCoCo no build.gradle.kts para exclusões corretas e limite de 90%.
- Corrige extensão de arquivos de teste temporários (.java.bak).